--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -102,6 +102,10 @@ img{
     align-items: center;
     margin-top: 24px;
 }
+.add-to-cart-btn{
+    border: none;
+    cursor: pointer;
+}
 .cart-infos-menu-item i{
     background-color: var(--black);
     color: var(--white);
@@ -136,5 +140,71 @@ footer{
     align-items: center;
     gap: 8px;
 }
-
+/*modal*/
+.modal-cart {
+    background-color: rgba(0, 0, 0, 0.658);
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.modal-cart.ativo{
+    display: flex;
+}
+.modal-cart .container {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 100%;
+}
+.modal-cart-content > h1{
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.adress-cart{
+    margin-bottom: 40px;
+    margin-top: 20px;
+}
+#adress{
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: 1px solid #c3c3c3;
+    width: 100%;
+    
+}
+.modal-cart-content h2{
+    font-size: 14px;
+}
+.bottom-cart{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.open-cart{
+    background-color: transparent;
+    border: none;
+}
+.close-cart,
+.finish-cart{
+    border: none;
+    padding: 12px 20px;
+    font-weight: 600;
+    border-radius: 4px;
+}
+.finish-cart{
+    background-color: var(--green);
+    color: var(--white);
+}
+.adress-warn{
+    display: none;
+}
+/*modal*/
 /*footer*/
