--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,6 +61,9 @@ img{
     border-radius: 4px;
     margin-top: 16px;
 }
+.content-banner-header a.fechado{
+    background-color: red;
+}
 /*banner*/
 
 /*cardapio*/
@@ -163,6 +166,8 @@ footer{
     border-radius: 8px;
     max-width: 500px;
     width: 100%;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 .modal-cart-content > h1{
     font-size: 18px;
@@ -181,7 +186,7 @@ footer{
     
 }
 .modal-cart-content h2{
-    font-size: 14px;
+    font-size: 16px;
 }
 .bottom-cart{
     display: flex;
@@ -198,6 +203,7 @@ footer{
     padding: 12px 20px;
     font-weight: 600;
     border-radius: 4px;
+    cursor: pointer;
 }
 .finish-cart{
     background-color: var(--green);
@@ -206,5 +212,40 @@ footer{
 .adress-warn{
     display: none;
 }
+
+.cart-itens-modal{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.cart-itens-modal button{
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.cart-itens-modal > div {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.cart-itens-modal-name{
+    font-weight: bold;
+}
+.cart-itens-total {
+    padding-top: 16px;
+}
+#cart-items{
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+}
+.adressWarn.remove{
+    display: none;
+}
+.adressWarn{
+    color: red;
+    
+}
+
 /*modal*/
 /*footer*/
