--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -120,6 +120,17 @@ img{
         grid-template-columns: 1fr;
     }
 }
+@media (max-width: 467px) {
+    .infos-menu-item h2{
+        font-size: 16px;
+    }
+    .infos-menu-item p{
+        margin-top: 14px;
+    }
+    .cart-infos-menu-item{
+        margin-top: 18px;
+    }
+}
 /*cardapio*/
 
 /*footer*/
